# pydata23-synth-data

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
flyway/: configure_flyway_cli.sh  flyway.toml
flyway/migrations/: V1_01__create_users_table.sql  V1_02__insert_users.sql  V1_1__create_customers_table.sql  V1_2__insert_customers_records.sql  V1_3__create_products_table.sql  V1_4__insert_products_records.sql  V1_5__create_devices_table.sql  V1_6__insert_devices_records.sql  V1_7__create_transactions_table.sql  V1_8__insert_transactions_records.sql
notebooks/: faker-sql-test.ipynb  online-store-data.ipynb
prompts/: base-slides.md  title-abstract.md
slides/: main-slides.html  main-slides.md
sql/: example-queries.sql
