[tool.poetry]
name = "pycon23"
version = "0.1.0"
description = "How to build a data pipeline without data: A case study of synthetic data generation and testing with Python."
authors = ["Ruan Pretorius"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
python-dotenv = "^1.0.0"
faker = "^19.6.1"
sqlalchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
